package Bridge;

//интерфейс терминала, на схеме интерфейс Implementor
public interface Terminal {
    void bill(int cost);//  Определим для примера метод, принимающий оплату
}
