@startuml
class Bridge.Main {
+ {static} void main(String[])
}
class Bridge.NfcTerminal {
+ void bill(int)
}
class Bridge.DonaldDuck {
~ void getInfo()
}
abstract class Bridge.Fastfood {
- Terminal terminal
+ void setTerminal(Terminal)
+ void saleFood(int)
~ {abstract}void getInfo()
}
class Bridge.TouchTerminal {
+ void bill(int)
}
interface Bridge.Terminal {
~ void bill(int)
}
class Bridge.CKF {
~ void getInfo()
}


Bridge.Terminal <|.. Bridge.NfcTerminal
Bridge.Fastfood <|-- Bridge.DonaldDuck
Bridge.Terminal <|.. Bridge.TouchTerminal
Bridge.Fastfood <|-- Bridge.CKF
@enduml